<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_hoteles"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/hoteles" />
        <item
            android:id="@+id/nav_sitios"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sitios" />
        <item
            android:id="@+id/nav_bares"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/bares" />
        <item
            android:id="@+id/nav_demografica"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/demografia" />
    </group>


</menu>
